// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a list with elements correctly 1`] = `
<div
  className="MuiPaper-root fullwidth MuiPaper-elevation1 MuiPaper-rounded"
  shadow={0}
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "borderBottom": "1px solid #f9f9f9",
        "display": "flex",
        "marginBottom": "10px",
        "padding": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        className="headerTitle"
      >
        Tag Types
      </h6>
    </div>
    <div
      style={
        Object {
          "flex": "1",
          "textAlign": "right",
        }
      }
    >
      <button
        aria-describedby={null}
        aria-label="add tag type"
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Add tag type"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.63 5.84C17.27 5.33 16.67 5 16 5L5 5.01C3.9 5.01 3 5.9 3 7v10c0 1.1.9 1.99 2 1.99L16 19c.67 0 1.27-.33 1.63-.84L22 12l-4.37-6.16z"
          />
        </svg>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <a
            href="/tag-types/edit/simple"
            onClick={[Function]}
          >
            <strong>
              simple
            </strong>
          </a>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          Some simple description
        </p>
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders an empty list correctly 1`] = `
<div
  className="MuiPaper-root fullwidth MuiPaper-elevation1 MuiPaper-rounded"
  shadow={0}
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "borderBottom": "1px solid #f9f9f9",
        "display": "flex",
        "marginBottom": "10px",
        "padding": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "flex": "2",
        }
      }
    >
      <h6
        className="headerTitle"
      >
        Tag Types
      </h6>
    </div>
    <div
      style={
        Object {
          "flex": "1",
          "textAlign": "right",
        }
      }
    >
      <button
        aria-describedby={null}
        aria-label="add tag type"
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Add tag type"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      No entries
    </li>
  </ul>
</div>
`;
